projects/nex.rpi/src/kubernetes/start-page/glance.yaml
---
# trunk-ignore-all(checkov/CKV_K8S_21): Namespace is managed by kustomize
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
    app.kubernetes.io/part-of: start-page
    app.kubernetes.io/version: 0.6.1
  name: glance
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: glance
        app.kubernetes.io/name: glance
    spec:
      automountServiceAccountToken: false
      containers:
        - image: docker.io/glanceapp/glance:v0.6.1@sha256:46b779b96786ad3ea53569532cb9ddb90a0b257063475f43e9d2bdbddd0e096c
          imagePullPolicy: Always
          livenessProbe:
            tcpSocket:
              port: http
            # See https://github.com/glanceapp/glance/issues/226
            # httpGet:
            #   path: /api/health
            #   port: http
            #   scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 30
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          name: glance
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: http
            # See https://github.com/glanceapp/glance/issues/226
            # httpGet:
            #   path: /api/health
            #   port: http
            #   scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 10m
              memory: 128Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 21390
            runAsGroup: 24300
            seccompProfile:
              type: RuntimeDefault
          startupProbe:
            tcpSocket:
              port: http
            # See https://github.com/glanceapp/glance/issues/226
            # httpGet:
            #   path: /api/health
            #   port: http
            #   scheme: HTTP
            initialDelaySeconds: 0
            periodSeconds: 2
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 15
          volumeMounts:
            - mountPath: /app/glance.yml
              name: glance-configuration
              subPath: glance.yml
      enableServiceLinks: false
      securityContext:
        fsGroup: 24300
        runAsUser: 21390
        runAsNonRoot: true
        runAsGroup: 24300
      volumes:
        - name: glance-configuration
          configMap:
            name: glance-configuration
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
    app.kubernetes.io/part-of: start-page
    app.kubernetes.io/version: 0.6.1
  name: glance
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
  type: ClusterIP
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
    app.kubernetes.io/part-of: start-page
    app.kubernetes.io/version: 0.6.1
  name: glance-cache
spec:
  plugin:
    souin:
      default_cache:
        ttl: 5m
        mode: bypass
      log_level: debug
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
    app.kubernetes.io/part-of: start-page
    app.kubernetes.io/version: 0.6.1
  name: glance
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: traefik-system
      sectionName: nr.chezmoi.sh-websecure
  hostnames:
    - home.nr.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: glance
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: glance-cache
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
    app.kubernetes.io/part-of: start-page
    app.kubernetes.io/version: 0.6.1
  name: glance
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: glance
      app.kubernetes.io/name: glance
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik-system
          podSelector:
            matchLabels:
              app.kubernetes.io/instance: traefik-traefik-system
              app.kubernetes.io/name: traefik
      ports:
        - port: 8080
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
